--- a/less/master.less
+++ b/less/master.less
@@ -4,9 +4,5 @@ body{
     padding:0;
 }
 
-// Banner
-.bruce-banner{
-    background:url('../images/banner.jpg') no-repeat;
-}
 
-@import '../banner.less';
+@import './banner.less';
