--- a/less/banner.less
+++ b/less/banner.less
@@ -1,4 +1,16 @@
 // Banner
 .bruce-banner{
-    background:url('./images/banner.jpg') no-repeat;
+    height: 150px;
+    background:url('../images/banner.jpg') no-repeat;
+
+    & .bruce-header-container{
+        padding: 25px 0 35px 35px;
+        width: 250px;
+        & .bruce-header-text{
+            font-size: 38px;
+            font-weight: 600;
+            color: #FFFFFF;
+            text-transform: uppercase;
+        }
+    }
 }
