--- a/css/master.css
+++ b/css/master.css
@@ -3,6 +3,19 @@ body {
   margin: 0;
   padding: 0;
 }
+.btn-battle {
+  height: 44px;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 16px;
+  border-radius: 5px;
+  border: none;
+}
+.btn-battle.btn-download-battle {
+  background-color: #3f3aac;
+  color: #FFFFFF;
+}
 .bruce-banner {
   height: 150px;
   background: url('../images/banner.jpg') no-repeat;
@@ -16,4 +29,31 @@ body {
   font-weight: 600;
   color: #FFFFFF;
   text-transform: uppercase;
+}
+.battle-pastbar {
+  float: left;
+  width: 25%;
+  padding: 0 25px 25px 25px;
+  margin-top: 25px;
+  border-right: 1px solid #979797;
+}
+.battle-pastbar .battle-label {
+  display: block;
+  font-size: 22px;
+  font-weight: 600;
+  color: #2F3337;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+.battle-pastbar .battle-title,
+.battle-pastbar .battle-timer {
+  display: block;
+  font-size: 18px;
+  font-weight: 600;
+  color: #545658;
+  text-transform: uppercase;
+}
+.battle-pastbar .btn-download-battle {
+  display: block;
+  margin-top: 16px;
 }
